Aqui en el index, cree una pagina de inicio donde esta el nombre de la tienda y se puede navegar para otras pestañas.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NovaWear | Inicio</title>
+  <link rel="stylesheet" href="estilos/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+  <header class="main-header">
+    <div class="logo">NovaWear</div>
+    <nav class="navbar">
+      <ul>
+        <li><a href="index.html" class="active">Inicio</a></li>
+        <li><a href="catalogo.html">Catálogo</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
+        <li><a href="preguntasFrecuentes.html">Preguntas Frecuentes</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="carrito.html">Carrito</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Bienvenido a NovaWear</h1>
+      <p>Ropa deportiva y casual con estilo. ¡Viste tu mejor versión!</p>
+      <a href="catalogo.html" class="btn">Explorar catálogo</a>
+    </div>
+  </section>
+
+  <section class="destacados">
+    <h2>Productos Destacados</h2>
+    <div class="productos">
+      <div class="producto">
+        <img src="images/camisetaNovaWear.png" alt="Camiseta deportiva">
+        <h3>Camiseta NovaFit</h3>
+        <p>Ligera, fresca y perfecta para entrenar.</p>
+      </div>
+      <div class="producto">
+        <img src="images/sudadera casual.jpeg" alt="Sudadera Casual">
+        <h3>Hoodie Urban</h3>
+        <p>Diseño moderno para tus días casuales.</p>
+      </div>
+      <div class="producto">
+        <img src="images/tennis NovaWear.jpeg" alt="Tenis deportivos">
+        <h3>Tenis NovaRun</h3>
+        <p>Confort y estilo para cada paso.</p>
+      </div>
+    </div>
+  </section>
+
+ <footer>
+  <p>&copy; 2025 NovaWear. Todos los derechos reservados.</p>
+  <p>Desarrollado por Diego Andrés Leiva Palma</p>
+</footer>
 </body>
 </html>
