Agregue mas productos a la pestaña de catalogo

--- a/catalogo.html
+++ b/catalogo.html
@@ -41,59 +41,151 @@
 
     <!-- Hombres -->
     <section class="productos-categoria" id="hombres">
-      <h2>Ropa para Hombres</h2>
-      <div class="productos-grid">
-        <article class="producto-card">
-          <div class="producto-imagen">
-            <img src="images/camisetaNovaWear.png" alt="Camiseta NovaFit" />
-          </div>
-          <div class="producto-info">
-            <h3 class="producto-nombre">Camiseta NovaFit</h3>
-            <p class="producto-descripcion">Ligera, fresca y perfecta para entrenar.</p>
-            <p class="producto-precio">Q 200.00</p>
-          </div>
-        </article>
-
-        <article class="producto-card">
-          <div class="producto-imagen">
-            <img src="images/sudadero ejercicio.jpg" alt="Sudadera Negra">
-          </div>
-          <div class="producto-info">
-            <h3 class="producto-nombre">Sudadera Negra</h3>
-            <p class="producto-descripcion">Ideal para tus rutinas deportivas.</p>
-            <p class="producto-precio">Q 215.00</p>
-          </div>
-        </article>
+  <h2>Ropa para Hombres</h2>
+  <div class="productos-grid">
+    <article class="producto-card">
+      <div class="producto-imagen">
+        <img src="images/camisetaNovaWear.png" alt="Camiseta NovaFit" />
       </div>
-    </section>
+      <div class="producto-info">
+        <h3 class="producto-nombre">Camiseta NovaFit</h3>
+        <p class="producto-descripcion">Ligera, fresca y perfecta para entrenar.</p>
+        <p class="producto-precio">Q 200.00</p>
+      </div>
+    </article>
+
+    <article class="producto-card">
+      <div class="producto-imagen">
+        <img src="images/sudadero ejercicio.jpg" alt="Sudadera Negra">
+      </div>
+      <div class="producto-info">
+        <h3 class="producto-nombre">Sudadera Negra</h3>
+        <p class="producto-descripcion">Ideal para tus rutinas deportivas.</p>
+        <p class="producto-precio">Q 215.00</p>
+      </div>
+    </article>
+
+    <article class="producto-card">
+      <div class="producto-imagen">
+        <img src="images/pants novawear.jpeg" alt="Pants deportivos">
+      </div>
+      <div class="producto-info">
+        <h3 class="producto-nombre">Pants Deportivos</h3>
+        <p class="producto-descripcion">Comodidad para el día a día.</p>
+        <p class="producto-precio">Q 180.00</p>
+      </div>
+    </article>
+
+    <article class="producto-card">
+      <div class="producto-imagen">
+        <img src="images/chaqueta novawear.jpeg" alt="Chaqueta ligera">
+      </div>
+      <div class="producto-info">
+        <h3 class="producto-nombre">Chaqueta Ligera</h3>
+        <p class="producto-descripcion">Perfecta para clima fresco y looks urbanos.</p>
+        <p class="producto-precio">Q 350.00</p>
+      </div>
+    </article>
+
+    <article class="producto-card">
+      <div class="producto-imagen">
+        <img src="images/gorra novawear.jpg" alt="Gorra NovaWear">
+      </div>
+      <div class="producto-info">
+        <h3 class="producto-nombre">Gorra NovaWear</h3>
+        <p class="producto-descripcion">Estilo urbano y deportivo.</p>
+        <p class="producto-precio">Q 90.00</p>
+      </div>
+    </article>
+
+    <article class="producto-card">
+  <div class="producto-imagen">
+    <img src="images/polo novawear.png" alt="Polo Casual">
+  </div>
+  <div class="producto-info">
+    <h3 class="producto-nombre">Polo Casual</h3>
+    <p class="producto-descripcion">Ideal para salidas casuales y cómodas.</p>
+    <p class="producto-precio">Q 210.00</p>
+  </div>
+</article>
+
+  </div>
+</section>
+
 
     <!-- Mujeres -->
     <section class="productos-categoria" id="mujeres" style="display: none;">
-      <h2>Ropa para Mujeres</h2>
-      <div class="productos-grid">
-        <article class="producto-card">
-          <div class="producto-imagen">
-            <img src="images/sudadera casual.jpeg" alt="Hoodie Urban" />
-          </div>
-          <div class="producto-info">
-            <h3 class="producto-nombre">Hoodie Urban</h3>
-            <p class="producto-descripcion">Diseño moderno para tus días casuales.</p>
-            <p class="producto-precio">Q 320.00</p>
-          </div>
-        </article>
-
-        <article class="producto-card">
-          <div class="producto-imagen">
-            <img src="images/tennis NovaWear.jpeg" alt="Tenis NovaRun" />
-          </div>
-          <div class="producto-info">
-            <h3 class="producto-nombre">Tenis NovaRun</h3>
-            <p class="producto-descripcion">Confort y estilo para cada paso.</p>
-            <p class="producto-precio">Q 480.00</p>
-          </div>
-        </article>
+  <h2>Ropa para Mujeres</h2>
+  <div class="productos-grid">
+    <article class="producto-card">
+      <div class="producto-imagen">
+        <img src="images/sudadera casual.jpeg" alt="Hoodie Urban" />
       </div>
-    </section>
+      <div class="producto-info">
+        <h3 class="producto-nombre">Hoodie Urban</h3>
+        <p class="producto-descripcion">Diseño moderno para tus días casuales.</p>
+        <p class="producto-precio">Q 320.00</p>
+      </div>
+    </article>
+
+    <article class="producto-card">
+      <div class="producto-imagen">
+        <img src="images/tennis NovaWear.jpeg" alt="Tenis NovaRun" />
+      </div>
+      <div class="producto-info">
+        <h3 class="producto-nombre">Tenis NovaRun</h3>
+        <p class="producto-descripcion">Confort y estilo para cada paso.</p>
+        <p class="producto-precio">Q 480.00</p>
+      </div>
+    </article>
+
+    <article class="producto-card">
+      <div class="producto-imagen">
+        <img src="images/leggins novawear.jpg" alt="Leggins FlexFit">
+      </div>
+      <div class="producto-info">
+        <h3 class="producto-nombre">Leggins FlexFit</h3>
+        <p class="producto-descripcion">Ajuste perfecto para entrenar o salir.</p>
+        <p class="producto-precio">Q 190.00</p>
+      </div>
+    </article>
+
+    <article class="producto-card">
+      <div class="producto-imagen">
+        <img src="images/top novawear.jpeg" alt="Crop Top Active">
+      </div>
+      <div class="producto-info">
+        <h3 class="producto-nombre">Crop Top Active</h3>
+        <p class="producto-descripcion">Ideal para entrenar con estilo y frescura.</p>
+        <p class="producto-precio">Q 150.00</p>
+      </div>
+    </article>
+
+    <article class="producto-card">
+      <div class="producto-imagen">
+        <img src="images/chaqueta mujer novawear.png" alt="Chaqueta Sport">
+      </div>
+      <div class="producto-info">
+        <h3 class="producto-nombre">Chaqueta Sport</h3>
+        <p class="producto-descripcion">Protección y ligereza para cada ocasión.</p>
+        <p class="producto-precio">Q 330.00</p>
+      </div>
+    </article>
+
+    <article class="producto-card">
+  <div class="producto-imagen">
+    <img src="images/blusa novawear.png" alt="Blusa FitFlow">
+  </div>
+  <div class="producto-info">
+    <h3 class="producto-nombre">Blusa FitFlow</h3>
+    <p class="producto-descripcion">Tejido suave para movimiento libre.</p>
+    <p class="producto-precio">Q 175.00</p>
+  </div>
+</article>
+
+  </div>
+</section>
+
   </main>
 
   <footer>
@@ -103,12 +195,26 @@
 
   <!-- SCRIPT para mostrar solo una categoría -->
   <script>
-    function mostrarCategoria(categoria) {
-      document.getElementById("hombres").style.display = "none";
-      document.getElementById("mujeres").style.display = "none";
+  function mostrarCategoria(categoria) {
+    document.getElementById("hombres").style.display = "none";
+    document.getElementById("mujeres").style.display = "none";
 
-      document.getElementById(categoria).style.display = "block";
-    }
-  </script>
+    document.getElementById(categoria).style.display = "block";
+
+    // Quitar clase activa de todos los botones
+    const botones = document.querySelectorAll(".catalogo-submenu button");
+    botones.forEach(btn => btn.classList.remove("active"));
+
+    // Agregar clase activa al botón presionado
+    const botonActivo = document.querySelector(`.catalogo-submenu button[onclick*="${categoria}"]`);
+    if (botonActivo) botonActivo.classList.add("active");
+  }
+
+  // Mostrar hombres por defecto al cargar
+  document.addEventListener("DOMContentLoaded", () => {
+    mostrarCategoria("hombres");
+  });
+</script>
+
 </body>
 </html>
